--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,21 +7,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#DDD"
+    android:background="#eee"
     android:orientation="vertical"
     tools:context=".analyse.MainActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
-        android:background="@color/colorPrimary"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/layout_main_photo"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -30,15 +30,14 @@
             android:layout_marginLeft="@dimen/margin_main_left"
             android:layout_marginRight="@dimen/margin_main_left"
             android:layout_marginTop="@dimen/margin_main_top"
-            android:background="@drawable/bg_rouned_white"
             android:gravity="center"
             android:orientation="horizontal">
 
             <LinearLayout
                 android:id="@+id/layout_main_border"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                >
+                android:layout_centerInParent="true"
+                android:layout_height="wrap_content">
 
                 <me.kaede.howoldrobot.widget.FaceImageView
                     android:id="@+id/iv_main_face"
@@ -47,73 +46,28 @@
                     android:layout_margin="@dimen/border_main_photo"/>
             </LinearLayout>
 
-        </LinearLayout>
-
-        <me.kaede.howoldrobot.widget.AgeIndicatorLayout
-
-            android:id="@+id/layout_main_age"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@+id/layout_main_bottom"
-            android:layout_marginBottom="@dimen/margin_main_top"
-            android:layout_marginLeft="@dimen/margin_main_left"
-            android:layout_marginRight="@dimen/margin_main_left"
-            android:layout_marginTop="@dimen/margin_main_top"
-            android:background="#00000000">
-
-            <LinearLayout
-                android:id="@+id/layout_main_introduce"
+            <me.kaede.howoldrobot.widget.AgeIndicatorLayout
+                android:id="@+id/layout_main_age"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/iv_main_introduce_logo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/border_main_photo"
-                    android:src="@drawable/icon_how_old_02"/>
+                android:background="#00000000">
 
                 <LinearLayout
-                    android:id="@+id/layout_main_introduce_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:id="@+id/layout_introduce"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:gravity="center"
                     android:orientation="vertical">
 
-                    <TextView
+                    <ImageView
+                        android:id="@+id/iv_logo"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="30dp"
-                        android:ellipsize="marquee"
-                        android:singleLine="true"
-                        android:text="@string/main_introduce_first"
-                        android:textColor="@color/orange_500"
-                        android:textSize="14sp"/>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="2dp"
-                        android:ellipsize="marquee"
-                        android:singleLine="true"
-                        android:text="@string/main_introduce_second"
-                        android:textColor="@color/orange_500"
-                        android:textSize="14sp"/>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="2dp"
-                        android:ellipsize="marquee"
-                        android:singleLine="true"
-                        android:text="@string/main_introduce_third"
-                        android:textColor="@color/orange_500"
-                        android:textSize="14sp"/>
+                        android:layout_margin="@dimen/border_main_photo"
+                        android:src="@drawable/icon_no_img"/>
                 </LinearLayout>
-            </LinearLayout>
-        </me.kaede.howoldrobot.widget.AgeIndicatorLayout>
+            </me.kaede.howoldrobot.widget.AgeIndicatorLayout>
+        </RelativeLayout>
 
         <LinearLayout
             android:id="@+id/layout_main_bottom"
@@ -123,7 +77,7 @@
             android:layout_marginBottom="@dimen/margin_main_top"
             android:layout_marginLeft="@dimen/margin_main_left"
             android:layout_marginRight="@dimen/margin_main_left"
-            android:background="@drawable/bg_rouned_white"
+            android:background="@drawable/bg_rounded_white"
             android:gravity="center"
             android:orientation="horizontal">
 
