--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,11 +6,16 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
     <dimen name="margin_main_top">5dp</dimen>
     <dimen name="margin_main_left">5dp</dimen>
     <dimen name="border_main_photo">3dp</dimen>
     <dimen name="offset_main_photo">10dp</dimen>
+
     <dimen name="common_actionbar_height">49dp</dimen>
+
     <dimen name="indicator_height">40dp</dimen>
     <dimen name="indicator_width">70dp</dimen>
+
+    <dimen name="toolbar_elevation">2dp</dimen>
 </resources>
