--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#eee"
+    android:background="#EEEEEE"
     android:orientation="vertical"
     tools:context=".analyse.MainActivity">
 
@@ -30,8 +30,10 @@
             android:layout_marginLeft="@dimen/margin_main_left"
             android:layout_marginRight="@dimen/margin_main_left"
             android:layout_marginTop="@dimen/margin_main_top"
+            android:background="#EEEEEE"
             android:gravity="center"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            tools:background="#33000000">
 
             <LinearLayout
                 android:id="@+id/layout_main_border"
@@ -50,7 +52,6 @@
                 android:id="@+id/layout_main_age"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:background="#33000000"
                 android:background="#00000000">
 
                 <LinearLayout
@@ -65,7 +66,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="@dimen/border_main_photo"
-                        android:src="@drawable/icon_no_img"/>
+                        android:src="@drawable/icon_no_img"
+                        tools:ignore="ContentDescription"/>
                 </LinearLayout>
             </me.kaede.howoldrobot.widget.AgeIndicatorLayout>
         </RelativeLayout>
@@ -80,7 +82,8 @@
             android:layout_marginRight="@dimen/margin_main_left"
             android:background="@drawable/bg_rounded_white"
             android:gravity="center"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            tools:ignore="DisableBaselineAlignment">
 
             <LinearLayout
                 android:id="@+id/btn_main_camera"
@@ -91,12 +94,14 @@
                 android:background="@drawable/shape_bg_buttons"
                 android:foreground="?attr/selectableItemBackground"
                 android:gravity="center"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                tools:ignore="RtlHardcoded">
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/icon_camera"/>
+                    android:src="@drawable/icon_camera"
+                    tools:ignore="ContentDescription"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -105,7 +110,7 @@
                     android:drawablePadding="10dp"
                     android:text="@string/main_tv_camera"
                     android:textColor="@android:color/white"
-                    />
+                    tools:ignore="RtlHardcoded"/>
             </LinearLayout>
 
             <LinearLayout
@@ -123,7 +128,8 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/icon_gallery"/>
+                    android:src="@drawable/icon_gallery"
+                    tools:ignore="ContentDescription"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -132,7 +138,7 @@
                     android:drawablePadding="10dp"
                     android:text="@string/main_tv_gallery"
                     android:textColor="@android:color/white"
-                    />
+                    tools:ignore="RtlHardcoded"/>
             </LinearLayout>
 
             <LinearLayout
@@ -144,12 +150,14 @@
                 android:background="@drawable/shape_bg_buttons"
                 android:foreground="?attr/selectableItemBackground"
                 android:gravity="center"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                tools:ignore="RtlHardcoded">
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/icon_share"/>
+                    android:src="@drawable/icon_share"
+                    tools:ignore="ContentDescription"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -158,7 +166,7 @@
                     android:drawablePadding="10dp"
                     android:text="@string/main_tv_share"
                     android:textColor="@android:color/white"
-                    />
+                    tools:ignore="RtlHardcoded"/>
             </LinearLayout>
         </LinearLayout>
     </RelativeLayout>
